Kubernetes/Lab/Sai_Kiran/Network_Policy/allow-same-ns-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-other-namespaces-traffic
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prod
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: prod
