Kubernetes/Lab/Sai_Kiran/Network_Policy/allow-traffic-single-ns.yml
#This Policy Will Allow Traffic Between PODs in prod NS with Label ns=prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-within-prod-namespace
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: web
