Kubernetes/Lab/Sai_Kiran/Network_Policy/allowing-coredns-ingress-prod.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-prod-to-coredns-on-tcp53
  namespace: prod
spec:
  podSelector:
    matchLabels:
      ns: prod
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 9153


#ku get pods -n kube-system
